--- a/_posts/2018-07-13-GitLab.md
+++ b/_posts/2018-07-13-GitLab.md
@@ -6,11 +6,11 @@ fullview: true
 
 In both of my classes, *CS371p: Object-Oriented Programming* and *CS373: Software Engineering* I've had my students use *source control*, *containerization*, and *continuous integration* for some time.
 
-For source control I've been using [git](https://git-scm.com) and [GitHub](https://github.com), for containerization I've been using [Docker](https://www.docker.com), and for continuous integration I've been using [Travis CI](https://travis-ci.org)
+For source control I've been using [<span style="color: blue">git</span>](https://git-scm.com) and [<span style="color: blue">GitHub</span>](https://github.com), for containerization I've been using [<span style="color: blue">Docker</span>](https://www.docker.com), and for continuous integration I've been using [<span style="color: blue">Travis CI</span>](https://travis-ci.org)
 
-In June of this year, [Microsoft](https://www.microsoft.com) acquired GitHub, which led to the exodus of many developers.
+In June of this year, [<span style="color: blue">Microsoft</span>](https://www.microsoft.com) acquired GitHub, which led to the exodus of many developers.
 
-I wanted to see what else was out there and came upon [GitLab](https://gitlab.com).
+I wanted to see what else was out there and came upon [<span style="color: blue">GitLab</span>](https://gitlab.com).
 
 GitLab is very similar to GitHub in many ways, but it has one outstanding feature, which is that continuous integration is built-in.
 
